--- a/hello_quantum_world.ipynb
+++ b/hello_quantum_world.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### IBM did amazing job notebook example (links below)! \n",
+    "### IBM did amazing job with their notebooks (links below)! \n",
     "### Can't top that. So here's my smallest possible example of what might be considered quantum computing.\n"
    ]
   },
